--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "dotenv": "^10.0.0",
+    "firebase-tools": "^9.16.0",
+    "global": "^4.4.0",
     "google-translate-api": "^2.3.0",
     "process": "^0.11.10",
     "react": "^17.0.2",
